# Xeely

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
resources/: request_example.txt
tests/: cli.py
tests/cli/: test_svg_payload.py
tests/custom_http/: client.py  request.py  test_request.py  test_server.py
tests/custom_xml/: test_doctype.py  test_entity.py  test_xml.py
tests/resources/: request_invalid_method.txt  request_invalid_path.txt  request_with_empty_body.txt  request_with_missing_host.txt  valid_request.txt  valid_request_with_xml.txt
tests/xxe/: cdata.py  decoding.py  test_attack_handler.py  test_payload.py
vulnerable_website/: Dockerfile  index.php  submitContact.php  test_php.php
vulnerable_website/static/css/: styles.css
vulnerable_website/static/js/: index.js
xeely/: __init__.py  __main__.py  cli.py  console.py
xeely/cli/: __init__.py  helper.py  options.py
xeely/custom_http/: __init__.py  client.py  methods.py  request.py  response.py  server.py
xeely/custom_http/errors/: __init__.py  client_status.py  client_timeout.py  missing_field.py  request_parsing.py
xeely/custom_xml/: __init__.py  doctype.py  entity.py  serializer.py  text_element.py  xml.py
xeely/custom_xml/errors/: __init__.py  not_text_element.py  xml_data_not_found.py  xml_element_not_found.py
xeely/resources/: cdata.dtd  error.dtd  hello.txt  oob.dtd
xeely/xxe/: cdata.py  decoding.py  dictionary.py  doctype.py  strategy.py
xeely/xxe/attack/: mode.py  type.py
xeely/xxe/attacks/: __init__.py  base.py  (+4 more)
(+17 files in other folders)
