[tool.poetry]
name = "xeely"
version = "0.1.0"
description = ""
authors = ["0xHexPloit <78966024+0xHexPloit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
pytest-httpserver = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true
